--- a/scss/loyout/_01-header.scss
+++ b/scss/loyout/_01-header.scss
@@ -1,6 +1,6 @@
 .header{
-    border-bottom: 1px solid var(--color-border);
-    background-color: var(--color-light);
+    border-bottom: getColor($color-border);
+    background-color: getColor($color-light);
     width: 1600px;
     height: 80px;
 }
@@ -40,7 +40,7 @@
 }
 .nav-link{
     font-family: 'Raleway';
-    color: var(--color-main-brand);
+    color: getColor($color-main-brand);
     font-weight: 700;
     font-size: 26px;
     letter-spacing: 0.03em;
@@ -49,7 +49,7 @@
 }
 .header-studio{
     font-family: 'Raleway';
-    color: var(--color-black);
+    color: getColor($color-black);
     font-weight: 700;
     font-size: 26px;
     letter-spacing: 0.03em;
@@ -60,13 +60,13 @@
     align-items: center;
 }
 .nav-list-link{
-    color: var(--color-dark);
+    color: getColor($color-dark);
     font-weight: 500;
     font-size: 14px;
     letter-spacing: 0.02em;
     text-decoration: none;
     position: relative;
-    padding-bottom: 32px; 
+    padding-bottom: 9px;
 
     transition-property: color, fill;
     transition-duration: 500ms;
@@ -74,14 +74,14 @@
     transition-delay: 100ms;
 }
 .nav-list-link:hover{
-    color: var(--color-main-brand);
+    color: getColor($color-main-brand);
 }
 .header-list{
     gap: 30px;
 }
 .list-link{
-    color: var(--color-text);
-    fill: var(--color-text);
+    color: getColor($color-text);
+    fill: getColor($color-text);
     font-weight: 500;
     font-size: 14px;
     letter-spacing: 0.02em;
@@ -96,10 +96,10 @@
     transition-delay: 100ms;
 }
 .list-item:hover .list-link{
-    color: var(--color-main-brand);
-    fill: var(--color-main-brand);
+    color: getColor($color-main-brand);
+    fill: getColor($color-main-brand);
 
 }
 .active-link{
-    color: var(--color-main-brand);
+    color: getColor($color-main-brand);
 }
