--- a/scss/loyout/_01-header.scss
+++ b/scss/loyout/_01-header.scss
@@ -40,7 +40,7 @@
 }
 .nav-link{
     font-family: 'Raleway';
-    color: getColor($color-main-brand);
+    color: var($color-main-brand);
     font-weight: 700;
     font-size: 26px;
     letter-spacing: 0.03em;
@@ -49,7 +49,7 @@
 }
 .header-studio{
     font-family: 'Raleway';
-    color: getColor($color-black);
+    color: var($color-black);
     font-weight: 700;
     font-size: 26px;
     letter-spacing: 0.03em;
@@ -66,7 +66,7 @@
     letter-spacing: 0.02em;
     text-decoration: none;
     position: relative;
-    padding-bottom: 9px;
+    padding-bottom: 31px;
 
     transition-property: color, fill;
     transition-duration: 500ms;
