--- a/css/main.css
+++ b/css/main.css
@@ -49,8 +49,8 @@ button:hover {
 }
 
 .header {
-  border-bottom: getColor(#ECECEC);
-  background-color: getColor(#FFFFFF);
+  border-bottom: #ECECEC;
+  background-color: #FFFFFF;
   width: 1600px;
   height: 80px;
 }
@@ -97,6 +97,7 @@ button:hover {
 
 .nav-link {
   font-family: "Raleway";
+  color: #2196F3;
   font-weight: 700;
   font-size: 26px;
   letter-spacing: 0.03em;
@@ -119,13 +120,13 @@ button:hover {
 }
 
 .nav-list-link {
-  color: getColor(#212121);
+  color: #212121;
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 0.02em;
   text-decoration: none;
   position: relative;
-  padding-bottom: 31px;
+  padding-bottom: 33px;
   transition-property: color, fill;
   transition-duration: 500ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -133,7 +134,7 @@ button:hover {
 }
 
 .nav-list-link:hover {
-  color: getColor(#2196F3);
+  color: #2196F3;
 }
 
 .header-list {
@@ -141,8 +142,8 @@ button:hover {
 }
 
 .list-link {
-  color: getColor(#757575);
-  fill: getColor(#757575);
+  color: #757575;
+  fill: #757575;
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 0.02em;
@@ -156,16 +157,16 @@ button:hover {
 }
 
 .list-item:hover .list-link {
-  color: getColor(#2196F3);
-  fill: getColor(#2196F3);
+  color: #2196F3;
+  fill: #2196F3;
 }
 
 .active-link {
-  color: getColor(#2196F3);
+  color: #2196F3;
 }
 
 .hero {
-  background-color: getColor(#2F303A);
+  background-color: #2F303A;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -180,7 +181,7 @@ button:hover {
 }
 
 .hero-title {
-  color: getColor(#FFFFFF);
+  color: #FFFFFF;
   width: 696px;
   font-weight: 900;
   font-size: 44px;
@@ -192,8 +193,8 @@ button:hover {
 }
 
 .hero-button {
-  background-color: getColor(#2196F3);
-  color: getColor(#FFFFFF);
+  background-color: #2196F3;
+  color: #FFFFFF;
   border-radius: 4px;
   font-weight: 700;
   font-size: 16px;
@@ -255,7 +256,7 @@ button:hover {
 .check-link {
   text-decoration: underline;
   text-decoration-skip-ink: none;
-  color: getColor(#2196F3);
+  color: #2196F3;
 }
 
 .div-form > input {
@@ -268,7 +269,7 @@ input, textarea {
 
 input:focus {
   /* outline: 1px red dashed; */
-  border: getColor(#2196F3);
+  border: #2196F3;
 }
 
 input:focus:invalid {
@@ -280,7 +281,7 @@ input:focus:invalid {
   font-size: 14px;
   line-height: 171%;
   letter-spacing: 0.03em;
-  color: getColor(#757575);
+  color: #757575;
 }
 
 .sumbit {
@@ -304,7 +305,7 @@ input:focus:invalid {
 
 .textarea:focus {
   /* outline: 1px red dashed; */
-  border: 1px solid getColor(#2196F3);
+  border: 1px solid #2196F3;
   transition: border-color 0.3s;
 }
 
@@ -346,7 +347,7 @@ input:focus:invalid {
   width: 528px;
   height: 581px;
   padding: 40px;
-  background-color: getColor(#FFFFFF);
+  background-color: #FFFFFF;
   transform: translate(-50%, -50%);
   transition-property: transform, opacity;
   transition-duration: 500ms;
@@ -357,21 +358,21 @@ input:focus:invalid {
   position: absolute;
   top: 32px;
   left: 15px;
-  fill: getColor(#212121);
+  fill: #212121;
 }
 
 .phone1 {
   position: absolute;
   top: 31.3px;
   left: 15px;
-  fill: getColor(#212121);
+  fill: #212121;
 }
 
 .mail {
   position: absolute;
   top: 32px;
   left: 14px;
-  fill: getColor(#212121);
+  fill: #212121;
 }
 
 .modal .btn {
@@ -384,7 +385,7 @@ input:focus:invalid {
   border-radius: 100%;
   fill: #000;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: getColor(#FFFFFF);
+  background-color: #FFFFFF;
   width: 31px;
   height: 31px;
 }
@@ -398,7 +399,7 @@ input:focus:invalid {
 }
 
 .peculiarities-section-title {
-  color: getColor(#212121);
+  color: #212121;
   font-size: 36px;
   text-align: center;
   margin-bottom: 50px;
@@ -425,7 +426,7 @@ input:focus:invalid {
   /* outline: 1px red dashed; */
   background-repeat: no-repeat;
   background-position: center;
-  background-color: getColor(#f5f4fa);
+  background-color: #f5f4fa;
   /* outline: 1px red dashed; */
 }
 
@@ -446,7 +447,7 @@ input:focus:invalid {
 }
 
 .peculiarities-title {
-  color: getColor(#212121);
+  color: #212121;
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 0.03em;
@@ -455,7 +456,7 @@ input:focus:invalid {
 }
 
 .description {
-  color: getColor(#757575);
+  color: #757575;
   font-weight: 400;
   font-size: 14px;
   line-height: 171%;
@@ -486,7 +487,7 @@ input:focus:invalid {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   text-align: center;
-  color: getColor(#FFFFFF);
+  color: #FFFFFF;
   background-color: rgba(47, 48, 58, 0.8);
   position: absolute;
   bottom: 0;
@@ -518,7 +519,7 @@ input:focus:invalid {
 }
 
 .section-team {
-  background-color: getColor(#f5f4fa);
+  background-color: #f5f4fa;
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -546,8 +547,8 @@ input:focus:invalid {
 
 .social-item:hover .social-link {
   border-radius: 50%;
-  background-color: getColor(#2196F3);
-  fill: getColor(#FFFFFF);
+  background-color: #2196F3;
+  fill: #FFFFFF;
 }
 
 .social-link {
@@ -565,7 +566,7 @@ input:focus:invalid {
 }
 
 .section-team-title {
-  color: getColor(#212121);
+  color: #212121;
   font-weight: 700;
   font-size: 36px;
   letter-spacing: 0.03em;
@@ -576,7 +577,7 @@ input:focus:invalid {
 .section-team-list-item {
   padding-bottom: 30px;
   border-radius: 0 0 4px 4px;
-  background-color: getColor(#FFFFFF);
+  background-color: #FFFFFF;
   box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
   /* outline: 1px red dashed; */
   display: flex;
@@ -596,7 +597,7 @@ input:focus:invalid {
 }
 
 .name {
-  color: getColor(#212121);
+  color: #212121;
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 0.03em;
@@ -605,7 +606,7 @@ input:focus:invalid {
 }
 
 .profession {
-  color: getColor(#757575);
+  color: #757575;
   font-weight: 400;
   font-size: 16px;
   letter-spacing: 0.03em;
@@ -621,6 +622,7 @@ input:focus:invalid {
   font-size: 36px;
   letter-spacing: 0.03em;
   text-align: center;
+  color: #212121;
   text-align: center;
   margin-bottom: 50px;
 }
@@ -628,6 +630,11 @@ input:focus:invalid {
 .clients-list {
   display: flex;
   gap: 30px;
+}
+
+.clients-item:hover .clients-link {
+  border-color: #2196F3;
+  fill: #2196F3;
 }
 
 .clients-link {
@@ -646,6 +653,7 @@ input:focus:invalid {
 }
 
 .footer {
+  background-color: #2F303A;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -655,6 +663,7 @@ input:focus:invalid {
 }
 
 .footer-link {
+  color: #2196F3;
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
@@ -664,6 +673,7 @@ input:focus:invalid {
 }
 
 .footer-studio {
+  color: #FFFFFF;
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
@@ -682,6 +692,7 @@ input:focus:invalid {
 }
 
 .adress-list-item-link-maps {
+  color: #FFFFFF;
   font-weight: 400;
   font-size: 14px;
   line-height: 171%;
@@ -689,6 +700,7 @@ input:focus:invalid {
 }
 
 .adress-list-item-link {
+  color: rgba(255, 255, 255, 0.6);
   font-weight: 400;
   font-size: 14px;
   line-height: 171%;
@@ -697,6 +709,10 @@ input:focus:invalid {
   transition-duration: 500ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 100ms;
+}
+
+.adress-list-item-link:hover {
+  color: #FFFFFF;
 }
 
 .footer-div {
@@ -714,11 +730,16 @@ input:focus:invalid {
   font-size: 14px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: #FFFFFF;
   margin-bottom: 20px;
 }
 
 .circle {
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+.fill {
+  fill: #FFFFFF;
 }
 
 .div-send {
@@ -731,6 +752,7 @@ input:focus:invalid {
   font-size: 14px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: #FFFFFF;
   margin-bottom: 20px;
 }
 
@@ -761,6 +783,7 @@ input:focus:invalid {
   align-items: center;
   justify-content: center;
   fill: white;
+  color: #FFFFFF;
   border-radius: 4px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #2196f3;
@@ -792,6 +815,7 @@ input:focus:invalid {
 #active {
   background-color: #2196F3;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
+  color: #FFFFFF;
 }
 
 .project-list {
@@ -808,6 +832,7 @@ input:focus:invalid {
   line-height: 162%;
   letter-spacing: 0.03em;
   text-align: center;
+  color: #212121;
   background-color: #F5F4FA;
   border: 0;
   padding: 6px 24px;
@@ -815,6 +840,8 @@ input:focus:invalid {
 }
 
 .list-item-button:hover {
+  background-color: #2196F3;
+  color: #FFFFFF;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
   cursor: pointer;
   transition-property: background, color, box-shadow;
@@ -839,7 +866,7 @@ input:focus:invalid {
   width: 370px;
   height: 110px;
   padding: 20px 23px 19px 23px;
-  border: solid;
+  border: solid var(--color-div);
   border-width: 0 1px 1px 1px;
   background-color: #FFFFFF;
   position: relative;
@@ -850,6 +877,7 @@ input:focus:invalid {
   font-size: 18px;
   line-height: 200%;
   letter-spacing: 0.06em;
+  color: var(--color-dark);
   justify-content: left;
   margin-bottom: 4px;
   text-wrap: nowrap;
@@ -860,10 +888,12 @@ input:focus:invalid {
   font-size: 16px;
   line-height: 187%;
   letter-spacing: 0.03em;
+  color: var(--color-text);
   justify-content: left;
 }
 
 .project-list-item {
+  background-color: var(--color-light);
   max-width: 370px;
   cursor: pointer;
   transition-property: box-shadow;
