--- a/scss/loyout/_03-pecularities.scss
+++ b/scss/loyout/_03-pecularities.scss
@@ -2,7 +2,7 @@
     padding-top: 94px;
 }
 .peculiarities-section-title{
-    color: getColor($color-dark);
+    color: getColor(dark);
     font-size: 36px;
     text-align: center;
     margin-bottom: 50px;
@@ -26,7 +26,7 @@
     /* outline: 1px red dashed; */
     background-repeat: no-repeat;
     background-position: center;
-    background-color: getColor($color-gray);
+    background-color: getColor(gray);
     /* outline: 1px red dashed; */
 }
 .peculiarities-list-item:nth-child(1):before{
@@ -42,7 +42,7 @@
     background-image: url(../images/astronaut.svg);
 }
 .peculiarities-title{
-    color: getColor($color-dark);
+    color: getColor(dark);
     font-weight: 700;
     font-size: 14px;
     letter-spacing: 0.03em;
@@ -50,7 +50,7 @@
     margin-bottom: 10px;
 }
 .description{
-    color: getColor($color-text);
+    color: getColor(text);
     font-weight: 400;
     font-size: 14px;
     line-height: 171%;
