--- a/scss/loyout/_01-filter.scss
+++ b/scss/loyout/_01-filter.scss
@@ -16,7 +16,7 @@
 #active{
     background-color: #2196F3;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
-    color: var(--color-light);
+    color: getColor(light);
 }
 .project-list{
     display: grid;
@@ -31,15 +31,15 @@
     line-height: 162%;
     letter-spacing: 0.03em;
     text-align: center;
-    color: var(--color-dark);
-    background-color: $color-button-p;
+    color: getColor(dark);
+    background-color: getColor(button-p);
     border: 0;
     padding: 6px 24px;
     border-radius: 4px;
 }
 .list-item-button:hover{
-    background-color: var(--color-main-brand);
-    color: var(--color-light);
+    background-color: getColor(main);
+    color: getColor(light);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.08), 0 3px 1px 0 rgba(0, 0, 0, 0.1);
     cursor: pointer;
 
